Finalizado geração de relatorio de veiculos mais publicados